--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -18,8 +25,7 @@
       <div class="container header-container">
         <nav class="header-navigation">
           <a href="./index.html" class="header-logo link"
-            >Web<span class="header-studio">Studio</span></a
-          >
+            >Web<span class="header-studio">Studio</span></a>
 
           <ul class="header-list list">
             <li>
@@ -85,9 +91,10 @@
                     width="360"
                     height="300"
                   />
+                   <div class="portfolio-container">
                   <h2 class="pic-title">Banking App Interface Concept</h2>
-                  <p class="pic-text">App</p></a
-                >
+                  <p class="pic-text">App</p></a>
+                   </div>
               </li>
               <li class="pic-item">
                 <a href="" class="pic-link link"
@@ -97,9 +104,10 @@
                     width="360"
                     height="300"
                   />
+                   <div class="portfolio-container">
                   <h2 class="pic-title">Cashless Payment</h2>
-                  <p class="pic-text">Marketing</p></a
-                >
+                  <p class="pic-text">Marketing</p></a>
+                </div>
               </li>
 
               <li class="pic-item">
@@ -110,9 +118,10 @@
                     width="360"
                     height="300"
                   />
+                  <div class="portfolio-container">
                   <h2 class="pic-title">Meditation App</h2>
-                  <p class="pic-text">App</p></a
-                >
+                  <p class="pic-text">App</p></a>
+                </div>
               </li>
               <li class="pic-item">
                 <a href="" class="pic-link link">
@@ -122,9 +131,10 @@
                     width="360"
                     height="300"
                   />
+                  <div class="portfolio-container">
                   <h2 class="pic-title">Taxi Service</h2>
-                  <p class="pic-text">Marketing</p></a
-                >
+                  <p class="pic-text">Marketing</p></a>
+                  </div>
               </li>
               <li class="pic-item">
                 <a href="" class="pic-link link"
@@ -134,9 +144,10 @@
                     width="360"
                     height="300"
                   />
+                  <div class="portfolio-container">
                   <h2 class="pic-title">Screen Illustrations</h2>
-                  <p class="pic-text">Design</p></a
-                >
+                  <p class="pic-text">Design</p></a>
+                </div>
               </li>
               <li class="pic-item">
                 <a href="" class="pic-link link"
@@ -146,9 +157,10 @@
                     width="360"
                     height="300"
                   />
+                  <div class="portfolio-container">
                   <h2 class="pic-title">Online Courses</h2>
-                  <p class="pic-text">Marketing</p></a
-                >
+                  <p class="pic-text">Marketing</p></a>
+                </div>
               </li>
               <li class="pic-item">
                 <a href="" class="pic-link link"
@@ -158,9 +170,10 @@
                     width="360"
                     height="300"
                   />
+                  <div class="portfolio-container">
                   <h2 class="pic-title">Instagram Stories Concept</h2>
-                  <p class="pic-text">Design</p></a
-                >
+                  <p class="pic-text">Design</p></a>
+                </div>
               </li>
               <li class="pic-item">
                 <a href="" class="pic-link link"
@@ -170,9 +183,10 @@
                     width="360"
                     height="300"
                   />
+                  <div class="portfolio-container">
                   <h2 class="pic-title">Organic Food</h2>
-                  <p class="pic-text">Web Site</p></a
-                >
+                  <p class="pic-text">Web Site</p></a>
+                </div>
               </li>
               <li class="pic-item">
                 <a href="" class="pic-link link">
@@ -182,18 +196,19 @@
                     width="360"
                     height="300"
                   />
+                  <div class="portfolio-container">
                   <h2 class="pic-title">Fresh Coffee</h2>
-                  <p class="pic-text">Web Site</p></a
-                >
+                  <p class="pic-text">Web Site</p></a>
+                </div>
               </li>
             </ul>
-          </div>
+            </div>
+        </section>
       </section>
       <footer class="footer">
          <div class="container">
         <a href="./index.html" class="footer-logo link"
-          >Web<span class="footer-studio">Studio</span></a
-        >
+          >Web<span class="footer-studio">Studio</span></a>
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
